[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/forest_background.png" type="Texture" id=2]
[ext_resource path="res://Scripts/BattleScenes/BattleScene1.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Utils/BattleCharactersManager.gd" type="Script" id=5]
[ext_resource path="res://Fonts/BoxesDream.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/BattleScenes/BattleScene1Canvas.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 256
font_data = ExtResource( 6 )

[node name="BattleScene1" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -458 )
scale = Vector2( 2.5, 2 )
texture = ExtResource( 2 )
centered = false

[node name="TurnQueue" type="YSort" parent="."]
script = ExtResource( 5 )

[node name="DeadPool" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerSpawnPoint" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="PlayerSpawnPoint"]
position = Vector2( 294.094, 473.093 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="PostBattle" type="Label" parent="CanvasLayer"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -116.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 1 )
text = "Victory"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EnemySpawnPoints" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="EnemySpawnPoints"]
position = Vector2( 1932.46, 254.708 )

[node name="Position2D2" type="Position2D" parent="EnemySpawnPoints"]
position = Vector2( 1928.22, 550.785 )

[node name="Position2D3" type="Position2D" parent="EnemySpawnPoints"]
position = Vector2( 1936.7, 864.813 )
[connection signal="set_post_battle_ui" from="TurnQueue" to="CanvasLayer" method="_on_TurnQueue_set_post_battle_ui"]
